# Gaussian-Splat-Editor

./: .clangd  .gitignore  CMakeLists.txt  Main.cpp  README.md  build.sh  flake.nix  shell.nix
assets/: README.md
include/: App.h  Camera.h  DataObject.h  GUI.h  Model.h  OPPCH.h  ShaderClass.h  Utils.h  Window.h
shaders/: box_frag.glsl  box_vert.glsl  gaussian_frag.glsl  gaussian_vert.glsl  geo_frag.glsl  geo_gert.glsl  geo_vert.glsl  pointcloud_frag.glsl  pointcloud_vert.glsl
src/: App.cpp  Camera.cpp  DataObject.cpp  GUI.cpp  Model.cpp  ShaderClass.cpp  Utils.cpp  Window.cpp
